# tg-logger-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ops/observability/alloy/: config.alloy
ops/observability/grafana/dashboards/: tg-logger-bot-overview.json
ops/observability/loki/: config.yml
ops/observability/prometheus/: prometheus.yml
src/: .botenv
src/app/: __init__.py  db.py  logger.py  main.py  utils.py
src/app/application/: __init__.py
src/app/application/dto/: __init__.py  chat_user.py
src/app/application/protocols/: __init__.py  bot_runtime_settings_repository.py  chat_state_repository.py  custom_command_repository.py  message_snapshot_repository.py
src/app/application/services/: __init__.py  admin_access.py  bot_runtime_settings.py  chat_state.py  custom_commands.py  message_snapshots.py
src/app/bootstrap/: __init__.py  container.py  dispatcher.py
src/app/bot_config/: config.py  settings.py
src/app/callback/: start_command_callback.py
src/app/config/: settings.py
src/app/core/: setup.py
src/app/database/: client.py  custom_command_db.py  greetings_db.py
src/app/domain/models/: __init__.py  bot_runtime_settings.py  chat_state.py  custom_command.py  message_snapshot.py
src/app/filter/: __init__.py  arg_message.py  callback_filter.py  chat.py  chat_type.py  delete_command.py  get_custom_command.py  set_custom_command.py  user.py
src/app/handler/: custom_command.py  events.py  greetings.py  start_.py
src/app/infrastructure/observability/: __init__.py  context.py  logging.py  metrics.py
src/app/infrastructure/persistence/: __init__.py  bot_runtime_settings_repository.py  chat_state_repository.py  custom_command_repository.py  message_snapshot_repository.py  sqlite.py
src/app/infrastructure/time/: __init__.py  system_clock.py
src/app/presentation/: __init__.py
src/app/presentation/filters/: __init__.py  chat.py  owner.py
src/app/presentation/formatters/: __init__.py  message_edits.py  messages.py  rights.py  system_messages.py
src/app/presentation/keyboards/: __init__.py  admin_links.py
src/app/presentation/mappers/: __init__.py  chat_user.py
src/app/presentation/middlewares/: __init__.py  message_state.py  update_observability.py
src/app/presentation/parsers/: __init__.py  custom_commands.py
src/app/presentation/routers/: __init__.py  start.py  (+6 more)
src/app/text_converter/: connector.py
src/app/time_handler/: time_now.py
tests/unit/application/: test_admin_access.py  test_bot_runtime_settings.py  test_chat_state.py  test_custom_commands.py
tests/unit/infrastructure/: test_sqlite_repository.py
tests/unit/presentation/: test_custom_command_parser.py  test_message_formatters.py  test_system_messages.py  test_system_updates.py
(+3 files in other folders)
