#[project]
#name = "telegram-logger-bot"
#version = "0.1.0"
#description = "Add your description here"
#readme = "README.md"
#requires-python = ">=3.14"
#dependencies = []

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

# src-layout
[tool.hatch.build.targets.wheel]
packages = [
    "src/app",
]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md"]

[project]
name = "Logs_telegram_bot"
version = "0.1.0"
description = "Checking log from chat."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
