#[project]
#name = "telegram-logger-bot"
#version = "0.1.0"
#description = "Add your description here"
#readme = "README.md"
#requires-python = ">=3.14"
#dependencies = []

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

# src-layout
[tool.hatch.build.targets.wheel]
packages = [
    "src/app",
]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md"]

[project]
name = "Logs_telegram_bot"
version = "0.1.0"
description = "Checking log from chat."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "better-exceptions>=0.3.3",
    "colorama>=0.4.6",
    "ecs-logging>=2.3.0",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
